--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -20,6 +20,8 @@ $action-sheet-md-title-font-size : 1.8rem;
 $list-inset-ios-border-radius : 5px;
 $list-inset-md-border-radius : 5px;
 $list-inset-wp-border-radius : 5px;
+$text-input-ios-show-focus-highlight : false;
+$text-input-md-show-focus-highlight : false;
 
 // Named Color Variables
 // --------------------------------------------------
